# wav2mp3

./: .gitignore  CMakeLists.txt  README.md
cmake/: Findmp3lame.cmake
include/: LameWrapper.hpp  args.hpp  threading.hpp  utils.hpp  wave.h  wave_header.hpp
include/win/: dirent.h  lame.h  pthread.h  sched.h  semaphore.h
lib/Debug/x86/: libmp3lame-static.lib  mpghip-static.lib
lib/Release/x86/: libmp3lame-static.lib  libmpghip-static.lib
lib/ReleaseSSE2/x86/: libmp3lame-static.lib  libmpghip-static.lib
src/: LameWrapper.cpp  args.cpp  main.cpp  threading.cpp  utils.cpp  wave.cpp  wave_header.cpp
